@@ -1919,6 +1919,17 @@ affect is that if the target should be exposed to sunlight while under \
 the affect of this spell, they will be turned into stone as per the \
 Flesh to Stone spell.
 
+TAINT_OF_EVIL=PRAYER_TAINTOFEVIL
+PRAYER_TAINT_OF_EVIL=PRAYER_TAINTOFEVIL
+PRAYER_TAINTOFEVIL=<ABILITY>\
+Usage    : PRAY "TAINT OF EVIL" [TARGET NAME]\n\r\
+Example  : pray "taint of evil" orc\n\r\
+This prayer causes to target to have the taint of evil curse.  This \
+curse makes the target drawn towards malicious and evil actions. \
+Others perceive all actions \
+performed by the afflicted as less noble and good, resulting in less \
+positive alignment gain from good actions.
+
 PRAYER_THUNDERBOLT=<ABILITY>\
 Usage    : PRAY "THUNDERBOLT" [TARGET NAME]\n\r\
 Example  : pray "thunderbolt" bob\n\r\
