@@ -4,7 +4,9 @@
    3. Pirates no longer regain lost limbs after death.
    4. New resource: DIRT.  Mass Grave now populates its room with the stuff.
    5. GModify now supports query-able stat "CLASSTYPE"
-   6. New Trapper skill: Wilderness Sounds
+   6. New Skills: Wilderness Sounds, Hardiness
+   7. New Prayers: Taint of Evil
+   8. Centaur gets Hardiness, Drow adds Light Sensitivity and Taint of Evil
 # Build 5.9.4 Released 08/03/2016
    1. Qualify now shows language limits
    2. New Prop_NoTeleport exceptions
